@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-22T08:21:41Z",
-  "count_outdated" : 110,
-  "uniques_outdated" : 75,
+  "timestamp" : "2022-04-23T16:23:42Z",
+  "count_outdated" : 111,
+  "uniques_outdated" : 76,
   "count" : 138,
   "uniques" : 94,
   "clones" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 3,
