@@ -1,12 +1,7 @@
 {
-  "count": 28,
-  "uniques": 14,
+  "count": 27,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 3,
