@@ -1,3 +1,9 @@
+2022-04-23T16:23:42Z:
+* notice: last 14d: all unq: 27 13
+* notice: prev accum: outdated-all outdated-unq / all unq: 110 75 / 138 94
+* notice: next accum: outdated-all outdated-unq / all unq: 111 76 / 138 94
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-22T08:21:41Z:
 * notice: last 14d: all unq: 28 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 106 72 / 138 94
